--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,54 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Arima:wght@100;200;300;400;500;600&display=swap');
+
+
+html {
+  scroll-behavior: smooth;
+  font-family: 'Roboto', sans-serif;
+}
+body::-webkit-scrollbar{
+  width: 8px
+}
+body::-webkit-scrollbar-thumb{
+  background-color: #8892B0;
+  border-radius: 50px
+}
+body::-webkit-scrollbar-thumb:hover{
+  background-color: #c3c7d6;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+h2{
+  font-family: 'Arima';
 }
 
-* {
-  box-sizing: border-box;
+
+
+@layer base {
+  body {
+    @apply bg-[#0a192f] text-[#ffff] tracking-wide; 
+  }
+
+  h1{
+    @apply font-bold
+  }
+  h2 {
+    @apply font-bold text-[#38B6FF] text-3xl sm:text-4xl
+  }
+  h3{
+    @apply font-bold text-white
+  }
+  h4, h5, h6{
+    @apply font-bold text-white
+  }
+  
+  li {
+    @apply cursor-pointer
+  }
+
+ 
 }
